bad/assign_arr_elem_bool_int.example_compiler_output
ERROR
[1mbad/assign_arr_elem_bool_int.lat:4:22: [1;31merror: [0;1massigning to `boolean` from incompatible type `int`[m
	(new boolean[3])[1] = 42;
	                    [1;32m^[m
